@@ -127,6 +127,8 @@ public:
   SparseComplexMatrix sparse_complex_matrix_value (bool = false) const
     { return matrix; }
 
+  SparseBoolMatrix sparse_bool_matrix_value (bool warn = false) const;
+
 #if 0
   int write (octave_stream& os, int block_size,
 	     oct_data_conv::data_type output_type, int skip,
